--- a/package.json
+++ b/package.json
@@ -16,11 +16,15 @@
     "react-credit-card-input": "^1.1.5",
     "react-credit-cards": "^0.8.3",
     "react-dom": "^18.2.0",
+    "react-intl-tel-input": "^8.2.0",
+    "react-native-credit-card-input": "^0.4.1",
     "react-otp-input": "^2.4.0",
+    "react-phone-input-2": "^2.15.1",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "styled-components": "^5.3.6",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "yup": "^0.32.11"
   },
   "scripts": {
     "start": "react-scripts start",
