--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@testing-library/user-event": "^13.5.0",
     "otp-input-react": "^0.3.0",
     "react": "^18.2.0",
+    "react-countdown-circle-timer": "^3.0.9",
     "react-credit-card-input": "^1.1.5",
     "react-credit-cards": "^0.8.3",
     "react-dom": "^18.2.0",
