--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@emotion/react": "^11.10.4",
     "@emotion/styled": "^11.10.4",
     "@mui/icons-material": "^5.10.3",
+    "@mui/lab": "^5.0.0-alpha.106",
     "@mui/material": "^5.10.7",
     "@mui/styles": "^5.10.7",
     "@testing-library/jest-dom": "^5.16.5",
@@ -17,6 +18,7 @@
     "react-credit-card-input": "^1.1.5",
     "react-credit-cards": "^0.8.3",
     "react-dom": "^18.2.0",
+    "react-infinite-scroll-component": "^6.1.0",
     "react-intl-tel-input": "^8.2.0",
     "react-native-credit-card-input": "^0.4.1",
     "react-otp-input": "^2.4.0",
@@ -24,6 +26,8 @@
     "react-places-autocomplete": "^7.3.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "react-scroll-motion": "^0.3.0",
+    "react-swipeable-bottom-sheet": "^1.1.2",
     "styled-components": "^5.3.6",
     "web-vitals": "^2.1.4",
     "yup": "^0.32.11"
